# nsu_fit

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp  openapi.yaml  solver
NetworkTechnologies/: Wifi.txt  lab1.pkt  packettracerlab1.pkt
Obs/: Untitled.md  Бисимулятивное сокращение.md  Булева функция.md  Весовые пространства.md  Граница грани.md  Дизъюнктное объединение струтктур.md  Добавление вершины степени 2.md  Достаточное условие бисимуляции.md  (+31 more)
object-oriented-programming/Cpp/GameOfLifeCLI/: AutomatonCalculator.cpp  AutomatonCalculator.h  CMakeLists.txt  Cell.cpp  Cell.h  GameDumper.cpp  GameDumper.h  GameField.cpp  GameOfLifeCLI.cpp  main.cpp
operating-systems/linux/nsu_os_proxy/multithread/: .clangd  CMakeLists.txt  main.cpp  t.sh
operating-systems/linux/nsu_os_proxy/multithread/headers/: ClientConnection.h  HTTPMessage.h  Proxy.h  Request.h  Response.h  ServerClient.h  ServerConnection.h  URLResource.h  picohttpparser.h
operating-systems/linux/nsu_os_proxy/multithread/sources/: ClientConnection.cpp  HTTPMessage.cpp  Proxy.cpp  Request.cpp  Response.cpp  ServerConnection.cpp  URLResource.cpp
operating-systems/linux/nsu_os_proxy/singlethread/: CMakeLists.txt  main.cpp  r.sh  t.sh  wget-log
operating-systems/linux/nsu_os_proxy/singlethread/headers/: ClientConnection.h  Connection.h  HTTPMessage.h  Proxy.h  Request.h  Response.h  ServerConnection.h  URLResource.h
operating-systems/linux/nsu_os_proxy/singlethread/sources/: ClientConnection.cpp  Proxy.cpp  Request.cpp  Response.cpp  ServerConnection.cpp  URLResource.cpp  picohttpparser.cpp
(+1064 files in other folders)
